<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.SettingActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/repeating_alarm"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_repeating_time"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/repeating_alarm"
        android:src="@drawable/ic_baseline_alarm_24"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_repeating_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/alarm_time"
        app:layout_constraintBottom_toBottomOf="@+id/btn_repeating_time"
        app:layout_constraintStart_toEndOf="@+id/btn_repeating_time"
        app:layout_constraintTop_toTopOf="@+id/btn_repeating_time" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#636363"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/btn_repeating_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_repeating_time" />

    <TextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/change_language_settings"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageButton
        android:id="@+id/btn_change_language"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/change_language_settings"
        android:src="@drawable/ic_baseline_language_24"
        app:layout_constraintStart_toStartOf="@+id/language"
        app:layout_constraintTop_toBottomOf="@+id/language" />

    <Button
        android:id="@+id/btn_language"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/change_language"
        app:layout_constraintBottom_toBottomOf="@+id/btn_change_language"
        app:layout_constraintEnd_toEndOf="@+id/language"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toEndOf="@+id/btn_change_language"
        app:layout_constraintTop_toTopOf="@+id/btn_change_language"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/alarm_time"
        app:layout_constraintBottom_toBottomOf="@+id/tv_repeating_time"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/tv_repeating_time"
        app:layout_constraintTop_toTopOf="@+id/tv_repeating_time" />

</androidx.constraintlayout.widget.ConstraintLayout>